fixed breadcrumb spacing
git-svn-id: http://vreportetl01t.corp.hds.com/svnrepo/HDS.com-Revamp/hdscorp@599 b06f84e9-1d16-493f-8c0d-41b76f67d7c8

--- a/content/src/main/content/jcr_root/etc/clientlibs/hdscorp/main/css/product-category.css
+++ b/content/src/main/content/jcr_root/etc/clientlibs/hdscorp/main/css/product-category.css
@@ -316,7 +316,7 @@
   }
   .hero-product-category .hero-product-solutions-container .product-category-heading{
     font-size:1.125rem;
-    margin-top: 80px;
+    /*margin-top: 80px;*/
     text-align: left;
   } 
 .category-listing div.MobileHolderWrapper{
